syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dixa.primes";
option java_outer_classname = "PrimesProto";

service PrimesService {
    rpc PrimesStream (PrimeRequest) returns (stream PrimeResponse) {}
}

message PrimeRequest {
    int32 n = 1;
}

message PrimeResponse {
    int32 prime = 1;
}
